--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bundlr-network/client": "^0.8.8",
+    "bignumber.js": "^9.1.0",
+    "ethers": "^5.7.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
